// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Documentation: Panel Overview renders 1`] = `
<Fragment>
  <h2
    id="overview"
  >
    Overview
  </h2>
  <p>
    Panel...
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Panel
      bodyContent={
        Array [
          "Your main panel content is put here.",
          "Some more content over here.",
          "And one more line, just to be safe.",
        ]
      }
      footerBtnText="Footer button"
      footerText="Footer content goes here."
      subTitle="Panel subtitle"
      title="Panel title"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Panel PanelDark renders 1`] = `
<Fragment>
  <h2
    id="panel-dark-mode"
  >
    Panel dark mode
  </h2>
  <p>
    Dark body with 
    <Property
      value=".panel-dark"
    />
    ...
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Panel
      bodyContent={
        Array [
          "Your main panel content is put here.",
          "Some more content over here.",
          "And one more line, just to be safe.",
        ]
      }
      darkMode={true}
      footerBtnText="Footer button"
      footerText="Footer content goes here."
      subTitle="Panel subtitle"
      title="Panel title"
      type="brand"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Panel PanelHeaders renders 1`] = `
<Fragment>
  <h2
    id="panel-headers"
  >
    Panel headers
  </h2>
  <p>
    Two types of headers... 
    <Property
      value=".panel-default"
    />
     and 
    <Property
      value=".panel-brand"
    />
    ...
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Panel
      title="Default panel"
    />
    


    <Panel
      title="Panel brand"
      type="brand"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Panel PanelMuted renders 1`] = `
<Fragment>
  <h2
    id="muted-panel"
  >
    Muted panel
  </h2>
  <p>
    Muted panel with 
    <Property
      value=".panel-muted"
    />
    ...
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Panel
      bodyContent={
        Array [
          "Your main panel content is put here.",
          "Some more content over here.",
          "And one more line, just to be safe.",
        ]
      }
      footerBtnText="Footer button"
      footerText="Footer content goes here."
      subTitle="Panel subtitle"
      title="Panel title"
      type="muted"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Panel PanelTable renders 1`] = `
<Fragment>
  <h2
    id="panel-with-table"
  >
    Displaying a full width table
  </h2>
  <p>
    To display a full width table in a panel use 
    <Property
      value=".panel-table"
    />
     on a div wrapping the table. Put 
    <Property
      value=".panel-table"
    />
     as a direct child of 
    <Property
      value=".panel"
    />
    . Tables put in a panel are given a border bottom to seperate it from the following elements.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Panel
      bodyContent={
        Array [
          "Your main panel content is put here.",
          "Some more content over here.",
          "And one more line, just to be safe.",
        ]
      }
      footerBtnText="Footer button"
      footerText="Footer content goes here."
      panelTable={[Function]}
      subTitle="Panel subtitle"
      title="Panel title"
      type="brand"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Panel PanelText renders 1`] = `
<div
  className="col-lg-10 doc-body"
>
  <p
    className="lead"
  >
    Panels...
  </p>
  <Overview />
  <PanelHeaders />
  <PanelDark />
  <PanelMuted />
  <PanelTable />
</div>
`;

exports[`Documentation: Panel TableContent  renders 1`] = `
<table
  className="table"
>
  <thead>
    <tr>
      <th
        scope="col"
      >
        #
      </th>
      <th
        scope="col"
      >
        First Name
      </th>
      <th
        scope="col"
      >
        Last Name
      </th>
      <th
        scope="col"
      >
        Location
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <th
        scope="row"
      >
        1
      </th>
      <td>
        Sven
      </td>
      <td>
        Svensson
      </td>
      <td>
        Visby
      </td>
    </tr>
    <tr>
      <th
        scope="row"
      >
        2
      </th>
      <td>
        Sara
      </td>
      <td>
        Svensson
      </td>
      <td>
        Stockholm
      </td>
    </tr>
    <tr>
      <th
        scope="row"
      >
        3
      </th>
      <td>
        Ola
      </td>
      <td>
        Nordmann
      </td>
      <td>
        Oslo
      </td>
    </tr>
    <tr>
      <th
        scope="row"
      >
        4
      </th>
      <td>
        Holger
      </td>
      <td>
        Danske
      </td>
      <td>
        Copenhagen
      </td>
    </tr>
    <tr>
      <th
        scope="row"
      >
        5
      </th>
      <td>
        Matti
      </td>
      <td>
        Meikäläinen
      </td>
      <td>
        Lahti
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Documentation: Panel renders 1`] = `
<div
  className="doc-container"
>
  <div
    className="row"
  >
    <PanelText />
    <DocToc
      component={[Function]}
    />
  </div>
</div>
`;
